# mcp-error-learning

./: .gitignore  DESIGN.md  README.en.md  README.md  pyproject.toml
src/mcp_error_learning/: __main__.py  database.py  models.py  server.py
src/mcp_error_learning/tools/: outcome.py  patterns.py  record.py  search.py
tests/: conftest.py  test_integration.py  test_record.py  test_search.py
